--- a/public/qr.html
+++ b/public/qr.html
@@ -107,7 +107,8 @@
         font-size: 2.8rem;
       }
       .btn {
-        width: 280px;
+        width: 400px;
+        height: 400px;
         padding: 14px 22px;
       }
     }
@@ -117,7 +118,8 @@
         font-size: 3.5rem;
       }
       .btn {
-        width: 280px;
+        width: 400px;
+        height: 400px;
         padding: 15px 25px;
       }
     }
