--- a/public/qr.html
+++ b/public/qr.html
@@ -102,25 +102,29 @@
       }
     }
 
-    @media (min-width: 600px) and (max-width: 1024px) {
+    @media (min-width: 600px) and (max-width: 1200px) {
       h1 {
-        font-size: 2.8rem;
+        font-size: 3.5rem;
       }
       .btn {
-        width: 400px;
-        height: 400px;
+        width: 800px;
         padding: 14px 22px;
+      }
+      .btn img {
+        height: 800px;
       }
     }
 
-    @media (min-width: 1024px) {
+    @media (min-width: 1200px) {
       h1 {
         font-size: 3.5rem;
       }
       .btn {
         width: 400px;
-        height: 400px;
         padding: 15px 25px;
+      }
+      .btn img {
+        height: 400px;
       }
     }
 
