Trying to fix Pair-Code

--- a/public/pair.html
+++ b/public/pair.html
@@ -37,19 +37,6 @@
       user-select: none;
     }
 
-    .pair-code-box {
-      padding: 15px 25px;
-      border-radius: 12px;
-      background: white;
-      color: #333;
-      font-size: 1.2rem;
-      font-weight: bold;
-      box-shadow: 0 5px 15px rgba(255, 255, 255, 0.4);
-      user-select: all;
-      min-width: 220px;
-      text-align: center;
-    }
-
     .btn {
       width: 250px;
       padding: 15px 25px;
@@ -140,6 +127,20 @@
       margin-top: 10px;
       font-size: 14px;
       display: none;
+    }
+
+    .pair-code-box {
+      padding: 15px 25px;
+      border-radius: 12px;
+      background: white;
+      color: #333;
+      font-size: 1.2rem;
+      font-weight: bold;
+      box-shadow: 0 5px 15px rgba(255, 255, 255, 0.4);
+      user-select: all;
+      width: 220px;
+      text-align: center;
+      cursor: copy;
     }
 
     @media (max-width: 600px) {
