--- a/public/pair.html
+++ b/public/pair.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pair Code Login</title>
+  <title>NADEEN-MD PAIR CODE</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Boldonse&display=swap');
     body {
@@ -13,7 +13,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(135deg, #4e9f3d, #34d7b7, #55c7f7);
+      background: linear-gradient(135deg,#6620e8,#2b67d6, #35c437,#d4ba37,#ba3634);
       background-size: 300% 300%;
       animation: gradientAnimation 10s ease infinite;
     }
@@ -176,14 +176,14 @@
   </style>
 </head>
 <body>
-    <h1>WhatsApp Pairing</h1>
+    <h1>NADEEN-MD PAIR GENERATOR</h1>
   
     <div class="input-container" id="input-section">
       <input 
         type="tel" 
         class="phone-input" 
         id="phone-number" 
-        placeholder="Enter your number (with country code)"
+        placeholder="Enter your number with country code (94)"
         pattern="[0-9]+"
       >
       <button class="btn" onclick="generatePairCode()">Generate Pair Code</button>
@@ -191,7 +191,7 @@
     </div>
   
     <div id="pair-code-section" class="hidden">
-      <div id="pair-code" class="pair-code-box">Loading...</div>
+      <div id="pair-code" class="pair-code-box">🔄Loading...</div>
       <button class="btn" onclick="resetForm()">Try Another Number</button>
     </div>
   
