--- a/public/qr.html
+++ b/public/qr.html
@@ -13,7 +13,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(135deg, #4e9f3d, #34d7b7, #55c7f7);
+      background: linear-gradient(135deg,#4302bd,#0049d1, #00a303,#d1ae00,#d10300);
       background-size: 300% 300%;
       animation: gradientAnimation 10s ease infinite;
     }
@@ -132,7 +132,7 @@
 </head>
 <body>
   <h1>Scan the QR Code to connect</h1>
-  <div id="qr-container" class="btn">Loading...</div>
+  <div id="qr-container" class="btn">🔄Loading...</div>
 
   <script>
     async function loadQR() {
