--- a/public/pair.html
+++ b/public/pair.html
@@ -13,7 +13,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(135deg,#6620e8,#2b67d6, #35c437,#d4ba37,#ba3634);
+      background: linear-gradient(135deg,#6620e8,#2b67d6,#2300a3,#5f00a3);
       background-size: 300% 300%;
       animation: gradientAnimation 10s ease infinite;
     }
