--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(135deg,#4302bd,#0049d1, #00a303,#d1ae00,#d10300,#4302bd);
+      background: linear-gradient(135deg,#4302bd,#0049d1, #00a303,#0838a8,#3608a8);
       background-size: 300% 300%;
       animation: gradientAnimation 15s ease infinite;
     }
