--- a/public/pair.html
+++ b/public/pair.html
@@ -5,25 +5,25 @@
   <meta charset="UTF-8">
   <title>NADEEN-MD PAIR CODE</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Boldonse&display=swap');
-    body {
+     body {
+      background-image: url("https://files.catbox.moe/3mvn78.png");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(135deg,#6620e8,#2b67d6,#2300a3,#5f00a3);
-      background-size: 300% 300%;
-      animation: gradientAnimation 10s ease infinite;
+      color: white;
     }
 
-    @keyframes gradientAnimation {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "url": "https://railway.app",
+            "logo": "https://files.catbox.moe/3mvn78.png"
     }
-
     h1 {
       color: white;
       font-size: 10px;
