--- a/public/pair.html
+++ b/public/pair.html
@@ -6,7 +6,7 @@
   <title>NADEEN-MD PAIR CODE</title>
   <style>
      body {
-      background-image: url("https://files.catbox.moe/3mvn78.png");
+      background-image: url("https://files.catbox.moe/ae7pqu.webp");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -22,7 +22,7 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "url": "https://railway.app",
-            "logo": "https://files.catbox.moe/3mvn78.png"
+            "logo": "https://files.catbox.moe/ae7pqu.webp"
     }
     h1 {
       color: white;
